if(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
endif(COMMAND cmake_policy)

add_subdirectory(lib)
add_subdirectory(syslim)
add_subdirectory(sysinfo)
add_subdirectory(filebuff)
add_subdirectory(filesys)
add_subdirectory(files)
add_subdirectory(xattr)
add_subdirectory(acl)
add_subdirectory(dirs_links)
add_subdirectory(getopt)
add_subdirectory(inotify)
add_subdirectory(signals)
add_subdirectory(timers)
add_subdirectory(procexec)
add_subdirectory(threads)
add_subdirectory(pgsjc)
add_subdirectory(procpri)
add_subdirectory(procres)
add_subdirectory(daemon)
add_subdirectory(cap)
add_subdirectory(loginacct)
add_subdirectory(shlibs)
add_subdirectory(pipes)
add_subdirectory(svipc)