add_executable(t_setsid t_setsid.c ../lib/error_functions.c)
add_executable(catch_SIGHUP catch_SIGHUP.c ../lib/error_functions.c)
add_executable(disc_SIGHUP disc_SIGHUP.c ../lib/error_functions.c)
add_executable(job_mon job_mon.c ../lib/error_functions.c)
add_executable(handling_SIGTSTP handling_SIGTSTP.c ../lib/error_functions.c)
add_executable(orphaned_pgrp_SIGHUP orphaned_pgrp_SIGHUP.c ../lib/error_functions.c)