link_libraries(lib)
add_executable(simple_pipe simple_pipe.c)
add_executable(pipe_sync pipe_sync.c ../time/curr_time.c)
add_executable(pipe_ls_wc pipe_ls_wc.c)
add_executable(popen_glob popen_glob.c ../procexec/print_wait_status.c)
add_executable(fifo_seqnum_server fifo_seqnum_server.c)
add_executable(fifo_seqnum_client fifo_seqnum_client.c)