link_libraries(lib)
add_executable(ouch ouch.c)
add_executable(intquit intquit.c)
add_executable(t_kill t_kill.c)
add_library(signal_function signal_functions.c signal_functions.h)

link_libraries(signal_function)
add_executable(sig_sender sig_sender.c)
add_executable(sig_receiver sig_receiver.c)
add_executable(nonreentrant nonreentrant.c)
target_link_libraries(nonreentrant -lcrypt)
add_executable(sigmask_longjump sigmask_longjmp.c)
add_executable(t_sigaltstack t_sigaltstack.c)
add_executable(demo_SIGFPE demo_SIGFPE.c)
add_executable(t_sigqueue t_sigqueue.c)
add_executable(catch_rtsigs catch_rtsigs.c)
add_executable(t_sigsuspend t_sigsuspend.c)
add_executable(t_sigwaitinfo t_sigwaitinfo.c)
add_executable(signalfd_sigval signalfd_sigval.c)