link_libraries(lib)
link_directories(.)
add_executable(us_xfr_sv us_xfr_sv.c)
add_executable(us_xfr_cl us_xfr_cl.c)
add_executable(ud_ucase_sv ud_ucase_sv.c)
add_executable(ud_ucase_cl ud_ucase_cl.c)
add_executable(i6d_ucase_sv i6d_ucase_sv.c)
add_executable(i6d_ucase_cl i6d_ucase_cl.c)
add_executable(is_seqnum_sv is_seqnum_sv.c read_line.c)
add_executable(is_seqnum_cl is_seqnum_cl.c read_line.c)