link_libraries(lib)
add_executable(svmsg_create svmsg_create.c)
add_executable(svmsg_send svmsg_send.c)
add_executable(svmsg_receive svmsg_receive.c)
add_executable(svmsg_rm svmmsg_rm.c)
add_executable(svmsg_chqbytes svmsg_chqbytes.c)
add_executable(svmsg_file_client svmsg_file_client.c)
add_executable(svmsg_file_server svmsg_file_server.c)
add_executable(svmsg_info svmsg_info.c)
add_executable(svmsg_ls svmsg_ls.c)