add_executable(simple_thread simple_thread.c ../lib/error_functions.c)
add_executable(thread_incr thread_incr.c ../lib/get_num.c ../lib/error_functions.c)
add_executable(thread_incr_mutex thread_incr_mutex.c ../lib/get_num.c ../lib/error_functions.c)
add_executable(prod_condvar prod_condvar.c ../lib/error_functions.c)
add_executable(thread_multijoin thread_multijoin.c ../lib/error_functions.c)