add_executable(calendar_time calendar_time.c)
target_link_libraries(calendar_time PUBLIC lib)
add_executable(strime strtime.c)
target_link_libraries(strime PUBLIC lib)
add_library(time curr_time.c)
target_link_directories(time PUBLIC *.h)
add_executable(show_time show_time.c)
target_link_libraries(show_time PUBLIC lib)
add_executable(process_time process_time.c)
target_link_libraries(process_time PUBLIC lib)